# cryptocurrency

./: Cargo.toml  README.md
src/: consts.rs  crypto.rs  error.rs  key_pair.rs  lib.rs  signature.rs  tx.rs  tx_handler.rs  utxo.rs  utxo_pool.rs
src/consts/msg/: en_us.rs
src/tx/: address.rs  input_tx.rs  non_empty_ext.rs  operation.rs  output_tx.rs  signature.rs  tx_builder.rs  tx_hash.rs  tx_idx.rs
src/tx/address/: public_key.rs  secret_key.rs
src/tx_handler/: max_fee_tx_handler.rs  validated_tx.rs
src/tx_handler/max_fee_tx_handler/: tx_and_fee.rs
