[package]
authors = ["u007d <b2b@humanenginuity.com>"]
categories = []
edition = "2018"
keywords = []
license = "MIT or Apache-2.0"
name = "scrooge_coin"
readme = "README.md"
repository = "https://github.com/u007d/scrooge_coin"
version = "0.1.0"

[dependencies]
thiserror = "1"
rust_decimal = "1"
nonempty = "0.5"
sha2 = "0.8"
serde = { version = "*", features = ["derive"] }
bincode = "1"
ed25519-dalek = "1"
rand = "0.7"
derive_more = "0.99"

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false

